...
            Text("Likes")
          }
        .tag(Tabs.tab3)
      TripListTab(trips: $appUser.appUser.trips)
          .tabItem {
            Image(systemName: Constants.SFSymbols.tripList)
            Text("Trips")
          }
          .badge(appUser.numberOfTrips)
          .tag(Tabs.tab4)
        ThingsToDo(thingsToDo: destinations.cities[0].thingsToDo)
          .tabItem {
            Image(systemName: "sun.max")
            Text("Things to Do")
          }
          .tag(Tabs.tab5)
      }
      .onAppear(perform: {
        Task {
          await getData()
...
