...
                              tripTaken: false,
                              image: Data(),
                              review: "")
              self.mode.wrappedValue.dismiss()
            }
          }, label: {
            Text("Save Trip")
          })
          .disabled(tripName.isEmpty || selectedCity.isEmpty)
        }
      }
      .navigationTitle("Create a new Trip")
    }
...
